# qt-calculator-cpp

./: CMakeLists.txt  Qalculator.pro  README.md  arithmeticoperation.cpp  arithmeticoperation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qalculator/: Qalculator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: arithmeticoperation.cpp
resources/: mainwindow.ui
src/: CMakeLists.txt
src/gui/: mainwindow.cpp  mainwindow.h
src/lib/: arithmeticoperation.cpp  arithmeticoperation.h
